# oss-validation

./: .gitignore  README.md  Stage1_Implementation_Summary.md  TODO.md  previous_workflow_summary.md  pyproject.toml  stage1_auto_harvest.py  stage1_auto_harvest_demo.py  temp_stats.py
archive/: anchor_template.csv  build_anchor_template.py  export_unanchored_components.py  network_adjustment_shifts.csv  parsing.py  positional_accuracy.py  rigorous_network_adjustment.py  stratified_sample_50.csv  stratified_sampling.py  tier2_distance.py  tier2_final_with_manual_filtered.csv  tier2_positional_accuracy.py  unanchored_blocks.gpkg
archive-tier2-fuckup/: anchor_resolution_CANDIDATES.csv  manual_anchor_apply.py  tier2_anchor_audit_good_worst10.csv  tier2_anchor_audit_newworst10.csv  tier2_anchor_audit_worst10.csv  tier2_final_with_manual.csv  tier2_positional_accuracy.csv
archive/archive-tier2-fuckup/: 100_anchor_worksheet_sheet1.csv  anchor_validation_workflow.md  (+1 more)
data/: centralva.geojson
data/processed/: cp_grants.csv  (+3 more)
docs/: handoff_validation_summary.md
oss_preprocessing/: config.py  cp_extract.py  download_reference.py  hist_modern_overlap.py  oss_extract.py
reports/: area_validation.md  least-squares.md  match_stats.md  positional_accuracy.md  spatial_validation.md  stratified-sample-interval.md
src/: __init__.py  config.py
tests/: test_anchor_extraction.py  test_download_reference.py  test_name_resolution.py  test_parsing.py  test_sampling.py  test_sanity.py  test_scoring.py  test_zone.py
tier2_positional_accuracy/: README.md
tools/: import_sweep.py
(+70 files in other folders)
