[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oss-validation"
version = "0.1.0"
description = "Pipeline to validate One Shared Story land-grant centroids against Cavaliers & Pioneers abstracts."
requires-python = ">=3.9"
authors = [
  { name = "One Shared Story", email = "info@onesharedstory.org" }
]
dependencies = [
  "pandas>=1.5",
  "geopandas>=0.13",
  "shapely>=2.0",
  "pyproj>=3.5",
  "rapidfuzz>=2.13",
  "spacy>=3.6",
  "tqdm>=4.66",
  "click>=8.1",
  "requests>=2.31",
  "osmnx>=1.7",
  "loguru>=0.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100 